# DragonFoxVPN

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  DragonFoxVPN Tray.spec  LICENSE  README.md  build.rs  build_windows.ps1  debug_fetch.py  dragonfox_vpn.py  increment_version.py  version_info.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md  translation_contribution.md
.github/PULL_REQUEST_TEMPLATE/: translation.md
.github/workflows/: build-release.yml
backend/: apache-vhost.conf.example  common.conf.example  dragonfox.conf.example  index.php  switch-openvpn.sh  vpn-route-up.sh  vpn.css
historical/: DragonFoxVPN Tray Compile.ps1  DragonFoxVPN Tray.ps1  DragonFoxVPN.cer
locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt_BR.json  ru.json  zh_CN.json
src/: api.rs  app.rs  autostart.rs  config.rs  daemon_ipc.rs  icons.rs  lib.rs  locale.rs  main.rs  notifications.rs  state.rs  system.rs  vpn_runtime.rs
tests/: api_tests.rs  autostart_tests.rs  config_tests.rs  daemon_ipc_tests.rs  icons_tests.rs  state_tests.rs  system_tests.rs  vpn_runtime_tests.rs
